outputs/tsp_constructive-constructive/2025-09-20_10-19-13/evaluations/problem_eval5626510209724213080_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined priority list or a heuristic like minimizing the average distance to remaining nodes) to balance exploration and optimization, falling back to the destination node if no unvisited nodes remain.}
                                                                                                ^
SyntaxError: unmatched ')'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defined priority list or a heuristic like minimizing the average distance to remaining nodes) to balance exploration and optimization, falling back to the destination node if no unvisited nodes remain.}
                                                                                                ^
SyntaxError: unmatched ')'
